--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -6,7 +6,7 @@ $banner-xs-height: 120px;
 $banner-sm-height: 160px;
 $font-title: 'Roboto Condensed', Arial, Helvetica, sans-serif;
 $font-subtitle: 'Roboto', Arial, Helvetica, sans-serif;
-$font-serif: 'Merriweather', serif;
+$font-serif: 'Alice', serif;
 
 $font-title: $font-serif;
 
