--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,4 @@
 @import './colors';
 
 $font-sans-serif: 'Roboto Condensed', Arial, Helvetica, sans-serif;
-$font-subtitle: 'Roboto', Arial, Helvetica, sans-serif;
-$font-serif: 'Merriweather', serif;
+$font-serif: 'Alice', serif;
