--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,7 +1,6 @@
 @import 'variables';
 
-@import url('https://fonts.googleapis.com/css?family=Merriweather:400,400i|Roboto|Roboto+Condensed');
-
+@import url('https://fonts.googleapis.com/css2?family=Alice&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 
 /*---------------- Text --------------- */
 
