--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -1,21 +1,26 @@
 @import '../../scss/variables';
 
-$card-height: 120px;
+$card-height: 100px;
 $text-card: white;
-$gutter: 20px;
+$gutter: 14px;
+$card-breakpoint: 880px;
 
 .card-grid {
   height: $card-height * 2.3;
   display: grid;
   column-gap: $gutter;
   row-gap: $gutter;
-  grid-template-columns: auto auto auto;
   align-content: space-evenly;
   align-content: center;
+  @media (max-width: $card-breakpoint) {
+    grid-template-columns: auto auto auto;
+  }
+  @media (min-width: $card-breakpoint) {
+    grid-template-columns: auto auto auto auto auto auto;
+  }
   .card-item {
     height: $card-height;
     position: relative;
-
     border-radius: 5px;
     overflow: hidden;
     .card-inner {
@@ -32,9 +37,7 @@ $gutter: 20px;
     }
     .card-text {
       font-family: $font-serif;
-      font-size: 2rem;
-      color: $text-card;
-      text-shadow: rgba(0, 0, 0, 1) 2px 2px 5px;
+      font-size: 1.7rem;
     }
   }
 }
@@ -42,17 +45,39 @@ $gutter: 20px;
 .card-grid {
   .card-item {
     transition: all 0.3s;
+    .card-inner {
+      transition: all 0.3s;
+    }
+    &:hover {
+      .card-inner {
+        background-color: rgba(200, 200, 200, 0);
+      }
+    }
     &:hover {
       transform: scale(1.03);
-    }
-    .card-inner {
-      .card-text {
-      }
     }
   }
 }
 
 /*---------- Colors-----------*/
+
+.card-grid {
+  .card-item {
+    .card-inner {
+      background-color: $base-color;
+      background-blend-mode: soft-light;
+      .card-text {
+        color: $text-card;
+        text-shadow: rgba(0, 0, 0, 1) 2px 2px 5px;
+      }
+    }
+    &:hover {
+      .card-inner {
+        background-color: rgba(200, 200, 200, 0);
+      }
+    }
+  }
+}
 
 // .card-grid {
 //   background: red;
