--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,4 +1,4 @@
-$base-color: #2a5747;
+$base-color: #2a7d69;
 $base-color-light: lighten($base-color, 10%);
 $base-color-lighter: lighten($base-color, 20%);
 $white: #ffffff;
