--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
 @import './colors';
 
-$font-sans-serif: 'Roboto Condensed', Arial, Helvetica, sans-serif;
+$font-sans-serif: 'Roboto', Arial, Helvetica, sans-serif;
 $font-serif: 'Alice', serif;
