--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -12,9 +12,17 @@ html {
 
 html,
 body {
-  font-family: $font-serif;
+  font-family: $font-sans-serif;
   color: $text-color;
   font-weight: normal;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
+}
+
+a {
+  color: $base-color;
+  text-decoration: none;
+  &:hover {
+    color: lighten($base-color, 20%);
+  }
 }
