--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -1,24 +1,40 @@
 @import '../../scss/variables';
 $navbar-height: 70px;
 .outer {
-  height: $navbar-height;
+  height: auto;
   position: relative;
-  margin: 0;
+  padding-left: none;
+  padding-right: none;
+  margin: 0 auto 50px auto;
   .inner {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: $navbar-height;
-    .header-logo {
-      width: 100px;
-    }
-    a {
-      font-family: $font-serif;
-      font-size: 1.4em;
+    // position: relative;
+    .nav-links {
       height: $navbar-height;
-      line-height: $navbar-height * 1.3;
-      padding: 0 30px;
+      display: flex;
+      align-items: center;
+      a.nav-link {
+        font-family: $font-serif;
+        font-size: 1.4em;
+        height: $navbar-height;
+        line-height: $navbar-height;
+        padding: 0 30px;
+      }
+      &.left {
+        margin-right: 30px;
+      }
+      &.right {
+        margin-left: 30px;
+      }
+    }
+    .header-logo {
+      // position: absolute;
+      margin-top: 16px;
+      width: 90px;
     }
   }
 }
