--- a/src/components/Slideshow/styles.scss
+++ b/src/components/Slideshow/styles.scss
@@ -1,24 +1,25 @@
 @import '../../scss/_variables.scss';
 
-$slideshow-height: 100px;
+$slideshow-height: 250px;
 
 .slideshow {
   height: $slideshow-height;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100vw;
+  position: relative;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax($slideshow-height * 1.3, 1fr));
+  row-gap: 0px;
+  grid-gap: 0px;
+  // grid-template-columns: repeat(3, 1fr);
+  background: darken($base-color, 20%);
+  margin-bottom: 70px;
 }
 
-/*----------- COLORS ---------------*/
-
-.slideshow {
-  background: gold;
+.slide {
+  height: $slideshow-height;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: all 0.7s ease;
 }
-
-// .slideshow-wrapper {
-//   background: red;
-//   .message {
-//     background: gold;
-//   }
-// }
