--- a/src/components/Slideshow/styles.scss
+++ b/src/components/Slideshow/styles.scss
@@ -8,12 +8,14 @@ $slideshow-height: 250px;
   position: relative;
   overflow: hidden;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax($slideshow-height * 1.3, 1fr));
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax($slideshow-height * 1.3, 1fr)
+  );
   row-gap: 0px;
   grid-gap: 0px;
   // grid-template-columns: repeat(3, 1fr);
   background: darken($base-color, 20%);
-  margin-bottom: 50px;
 }
 
 .slide {
