--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -37,7 +37,8 @@ $card-breakpoint: 880px;
     }
     .card-text {
       font-family: $font-serif;
-      font-size: 1.7rem;
+      font-size: 1.5rem;
+      letter-spacing: 0.04rem;
     }
   }
 }
