--- a/src/components/Alert/styles.scss
+++ b/src/components/Alert/styles.scss
@@ -7,10 +7,24 @@ $alert-height: 40px;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   .message {
     font-size: 0.94rem;
     font-weight: normal;
+  }
+}
+
+@media screen and (min-width: $breakpoint) {
+  .alert-wrapper {
+    justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: $breakpoint) {
+  .alert-wrapper {
+    justify-content: center;
+    .message {
+      text-align: center;
+    }
   }
 }
 
