--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -5,11 +5,9 @@ $navbar-height: 70px;
   position: relative;
   padding-left: none;
   padding-right: none;
-  overflow: hidden;
   .inner {
     height: $navbar-height;
-    display: grid;
-    justify-content: center;
+    display: flex;
     align-items: center;
     padding: 0;
     .nav-links {
@@ -22,35 +20,28 @@ $navbar-height: 70px;
         font-family: $font-serif;
         line-height: $navbar-height;
       }
-      &.left {
-        margin-right: 30px;
-      }
-      &.right {
-        margin-left: 30px;
+    }
+  }
+  &.lg {
+    .inner {
+      // grid-template-columns: auto 0.3fr auto;
+      justify-content: space-between;
+      .nav-links {
+        a.nav-link {
+          font-size: 1.4em;
+          padding: 0 20px;
+        }
       }
     }
   }
-}
-
-@media screen and (min-width: $breakpoint) {
-  .inner {
-    grid-template-columns: auto 0.3fr auto;
-    .nav-links {
-      a.nav-link {
-        font-size: 1.4em;
-        padding: 0 30px;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: $breakpoint) {
-  .inner {
-    grid-template-columns: auto 0.1fr auto;
-    .nav-links {
-      a.nav-link {
-        font-size: 1.1em;
-        padding: 0 6px;
+  &.sm {
+    .inner {
+      justify-content: center;
+      .nav-links {
+        a.nav-link {
+          font-size: 1.1em;
+          padding: 0 6px;
+        }
       }
     }
   }
@@ -62,8 +53,8 @@ $navbar-color: $base-color;
 $navbar-hover-color: lighten($navbar-color, 5%);
 $text-navbar: white;
 .outer {
-  background: $navbar-color;
   .inner {
+    background: $navbar-color;
     color: $text-navbar;
     a.nav-link {
       color: $text-navbar;
