--- a/src/components/Slideshow/styles.scss
+++ b/src/components/Slideshow/styles.scss
@@ -1,26 +1,48 @@
 @import '../../scss/_variables.scss';
 
-$slideshow-height: 250px;
+$slideshow-height-lg: 250px;
+$slideshow-height-sm: 160px;
 
-.slideshow {
-  height: $slideshow-height;
-  width: 100vw;
+.slideshow-lg,
+.slideshow-sm {
+  width: 100%;
   position: relative;
   overflow: hidden;
   display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax($slideshow-height * 1.3, 1fr)
-  );
   row-gap: 0px;
   grid-gap: 0px;
-  background: darken($base-color, 20%);
 }
 
 .slide {
-  height: $slideshow-height * 1;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   transition: all 0.7s ease;
+}
+
+.slideshow-lg {
+  height: $slideshow-height-lg;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax($slideshow-height-lg * 1.3, 1fr)
+  );
+  .slide {
+    height: $slideshow-height-lg;
+  }
+}
+
+.slideshow-sm {
+  height: $slideshow-height-sm;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax($slideshow-height-sm * 1.3, 1fr)
+  );
+  .slide {
+    height: $slideshow-height-sm;
+  }
+}
+
+.slideshow-lg,
+.slideshow-sm {
+  background: darken($base-color, 20%);
 }
