--- a/src/components/Alert/styles.scss
+++ b/src/components/Alert/styles.scss
@@ -1,29 +1,45 @@
 @import '../../scss/_variables.scss';
 
-$alert-height: 40px;
+$alert-height: 50px;
 
 .alert-wrapper {
   height: $alert-height;
   width: 100%;
-  display: flex;
-  align-items: center;
-  .message {
-    font-size: 0.94rem;
-    font-weight: normal;
+  .container {
+    display: flex;
+    height: $alert-height;
+    width: 100%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    .message {
+      height: $alert-height;
+      line-height:$alert-height;
+      font-size: 0.94rem;
+      font-weight: normal;
+      align-items: center;
+      padding: 0;
+    }
   }
 }
 
 @media screen and (min-width: $breakpoint) {
   .alert-wrapper {
-    justify-content: flex-start;
+    .container {
+      justify-content: space-between;
+    }
   }
 }
 
 @media screen and (max-width: $breakpoint) {
   .alert-wrapper {
-    justify-content: center;
-    .message {
-      text-align: center;
+    display:none;
+    .container {
+      justify-content: space-between;
+      .message {
+        text-align: center;
+        background: 'red';
+      }
     }
   }
 }
@@ -34,6 +50,7 @@ $alert-height: 40px;
   background: darken($base-color, 10%);
   .message {
     color: desaturate(lighten($base-color, 40%), 25%);
+    background: 'red';
   }
 }
 
