--- a/src/components/Title/styles.scss
+++ b/src/components/Title/styles.scss
@@ -1,11 +1,9 @@
 @import '../../scss/_variables.scss';
 
-$title-height: 150px;
+$title-height: 80px;
+$subtitle-height: 40px;
 
-.title-container {
-  height: $title-height;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+h1,
+h2 {
+  white-space: nowrap;
 }
