Update import paths in styles.scss files

--- a/src/components/MarqueList/styles.scss
+++ b/src/components/MarqueList/styles.scss
@@ -1,4 +1,4 @@
-@import '../../scss/variables';
+@import '@/scss/variables';
 $grid-item-size: 120px;
 $grid-image-size: 90px;
 $grid-label-size: 30px;
