--- a/src/components/Alert/styles.scss
+++ b/src/components/Alert/styles.scss
@@ -1,4 +1,4 @@
-@import '../../scss/_variables.scss';
+@import '@/scss/_variables.scss';
 
 $alert-height: 50px;
 
@@ -14,7 +14,7 @@ $alert-height: 50px;
     align-items: center;
     .message {
       height: $alert-height;
-      line-height:$alert-height;
+      line-height: $alert-height;
       font-size: 0.94rem;
       font-weight: normal;
       align-items: center;
@@ -33,7 +33,7 @@ $alert-height: 50px;
 
 @media screen and (max-width: $breakpoint) {
   .alert-wrapper {
-    display:none;
+    display: none;
     .container {
       justify-content: space-between;
       .message {
