--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -1,4 +1,4 @@
-@import '../../scss/variables';
+@import '@/scss/variables';
 
 $card-height: 160px;
 $text-card: white;
@@ -65,7 +65,7 @@ $card-breakpoint: 880px;
 .card-grid {
   .card-item {
     .card-inner {
-      background-color: transparentize($base-color, .5%);
+      background-color: transparentize($base-color, 0.5%);
       background-blend-mode: soft-light;
       .card-text {
         color: $text-card;
