--- a/src/components/Slideshow/styles.scss
+++ b/src/components/Slideshow/styles.scss
@@ -1,4 +1,4 @@
-@import '../../scss/_variables.scss';
+@import '@/scss/_variables.scss';
 
 $slideshow-height-lg: 250px;
 $slideshow-height-sm: 160px;
