--- a/src/pages/Registration/styles.scss
+++ b/src/pages/Registration/styles.scss
@@ -1,4 +1,4 @@
-@import '../../scss/_variables.scss';
+@import '@/scss/_variables.scss';
 
 $messaging-line-height: 1.2em;
 $messaging-letter-spacing: -0.04em;
