--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,13 +1,25 @@
 @import '@/scss/variables';
 
-$footer-logos-height-lg: 250px;
-$footer-logos-height-sm: 250px;
+$footer-logos-height-lg: 220px;
+$footer-logos-height-sm: 130px;
 
 $logo-size-lg: 100px;
 $logo-size-sm: 70px;
 
+.footer-email {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 5em;
+  a.email-link {
+    padding: 0 0.5em;
+  }
+}
+
 .footer-logos-outer {
-  margin-top: 20px;
+  margin-top: 0px;
   width: 100%;
   .footer-logos-inner {
     display: flex;
@@ -63,10 +75,19 @@ $logo-size-sm: 70px;
 /*---------- Colors-----------*/
 
 // $footer-logos-color: desaturate(lighten($base-color, 20%), 25%);
-$footer-logos-color: $base-color;
+$footer-email-color: $base-color;
+$base-color: #24584c;
+$footer-logos-color: lighten($base-color, 10%); //$base-color;
 $text-footer: white;
 
 .footer-logos-outer {
+  .footer-email {
+    background: $footer-email-color;
+    color: $text-footer;
+    a.email-link {
+      color: white;
+    }
+  }
   background: $footer-logos-color;
   .footer-logos-inner {
     color: $text-footer;
